--- a/DataLake.ipynb
+++ b/DataLake.ipynb
@@ -1,1 +1,153 @@
-{"cells":[{"cell_type":"code","source":["#Agrupado chaves relevantes\nClientId = ''\nClientSecret = ''\nTenantID = ''\n\n#Combinando DirectoryID em uma string\nEndpoint = 'https://login.microsoftonline.com/{}/oauth2/token'.format(TenantID)\n\n#Criando configurações para conexão\nspark.conf.set('fs.azure.account.auth.type','Oauth')\nspark.conf.set('fs.azure.account.oauth.provider.type', 'org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider')\nspark.conf.set('fs.azure.account.oauth.client.id', ClientId)\nspark.conf.set('fs.azure.account.oauth.client.secret', ClientSecret)\nspark.conf.set('fs.azure.account.oauth.client.endpoint', Endpoint)\n\n#https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-create-service-principal-portal"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\"></div>"]}}],"execution_count":1},{"cell_type":"code","source":["Dados = [('Lucas',26,'SãoPaulo','1994-09-01','M',4000),\n  ('Luana',20,'SãoPaulo','2000-09-05','F',1200),\n  ('Katia',35,'SãoPaulo','1985-03-16','F',1600)\n]\nColunas = [\"Nome\",\"Idade\",\"Estado\",\"DataNascimento\",\"Sexo\",\"Salario\"]\ndf = spark.createDataFrame(data=Dados, schema = Colunas)\ndf.show()"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">+-----+-----+--------+--------------+----+-------+\n Nome|Idade|  Estado|DataNascimento|Sexo|Salario|\n+-----+-----+--------+--------------+----+-------+\nLucas|   26|SãoPaulo|    1994-09-01|   M|   4000|\nLuana|   20|SãoPaulo|    2000-09-05|   F|   1200|\nKatia|   35|SãoPaulo|    1985-03-16|   F|   1600|\n+-----+-----+--------+--------------+----+-------+\n\n</div>"]}}],"execution_count":2},{"cell_type":"code","source":["df.show()"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">+-----+-----+--------+--------------+----+-------+\n Nome|Idade|  Estado|DataNascimento|Sexo|Salario|\n+-----+-----+--------+--------------+----+-------+\nLucas|   26|SãoPaulo|    1994-09-01|   M|   4000|\nLuana|   20|SãoPaulo|    2000-09-05|   F|   1200|\nKatia|   35|SãoPaulo|    1985-03-16|   F|   1600|\n+-----+-----+--------+--------------+----+-------+\n\n</div>"]}}],"execution_count":3},{"cell_type":"code","source":["df.repartition(1).write.format(\"csv\").option(\"header\", \"true\").save(\"adl://teste.azuredatalakestore.net/DF/Teste.csv\")"],"metadata":{},"outputs":[],"execution_count":4},{"cell_type":"code","source":["#Copiando o caminho do ultimo arquivo na pasta 'Teste'\nfile=dbutils.fs.ls('adl://teste.azuredatalakestore.net/DF/Teste.csv')[-1].path \nprint(file)"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">adl://convbrain.azuredatalakestore.net/DF/Teste.csv/part-00000-tid-1593424077123570889-d8e7543a-02be-4623-ae16-1bd55975df88-24-1-c000.csv\n</div>"]}}],"execution_count":5},{"cell_type":"code","source":["#Movendo o arquivo para pasta 'DF'\ndbutils.fs.mv(file, 'adl://teste.azuredatalakestore.net/DF/') "],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">Out[17]: True</div>"]}}],"execution_count":6},{"cell_type":"code","source":["#Copiando o caminho do ultimo arquivo na pasta 'DF'\nfile=dbutils.fs.ls('adl://teste.azuredatalakestore.net/DF')[-1].path \nprint(file)"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">adl://convbrain.azuredatalakestore.net/DF/part-00000-tid-1593424077123570889-d8e7543a-02be-4623-ae16-1bd55975df88-24-1-c000.csv\n</div>"]}}],"execution_count":7},{"cell_type":"code","source":["#Renomeando o Arquivo para 'NovoNome.csv'\ndbutils.fs.mv(file, 'adl://teste.azuredatalakestore.net/DF/NovoNome.csv')"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">Out[19]: True</div>"]}}],"execution_count":8},{"cell_type":"code","source":["#Excluindo a pasta Teste\ndbutils.fs.rm('adl://teste.azuredatalakestore.net/DF/Teste.csv/', recurse=True)"],"metadata":{},"outputs":[{"metadata":{},"output_type":"display_data","data":{"text/html":["<style scoped>\n  .ansiout {\n    display: block;\n    unicode-bidi: embed;\n    white-space: pre-wrap;\n    word-wrap: break-word;\n    word-break: break-all;\n    font-family: \"Source Code Pro\", \"Menlo\", monospace;;\n    font-size: 13px;\n    color: #555;\n    margin-left: 4px;\n    line-height: 19px;\n  }\n</style>\n<div class=\"ansiout\">Out[20]: True</div>"]}}],"execution_count":9},{"cell_type":"code","source":[""],"metadata":{},"outputs":[],"execution_count":10}],"metadata":{"name":"DataLake","notebookId":3227135820778403},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Criando a Conexão com o Azure DataLake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Agrupado chaves relevantes\n",
+    "ClientId = ''\n",
+    "ClientSecret = ''\n",
+    "TenantID = ''\n",
+    "\n",
+    "#Combinando DirectoryID em uma string\n",
+    "Endpoint = 'https://login.microsoftonline.com/{}/oauth2/token'.format(TenantID)\n",
+    "\n",
+    "#Criando configurações para conexão\n",
+    "spark.conf.set('fs.azure.account.auth.type','Oauth')\n",
+    "spark.conf.set('fs.azure.account.oauth.provider.type', 'org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider')\n",
+    "spark.conf.set('fs.azure.account.oauth.client.id', ClientId)\n",
+    "spark.conf.set('fs.azure.account.oauth.client.secret', ClientSecret)\n",
+    "spark.conf.set('fs.azure.account.oauth.client.endpoint', Endpoint)\n",
+    "\n",
+    "# https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-create-service-principal-portal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Criando um DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dados = [('Lucas',26,'SãoPaulo','1994-09-01','M',4000),\n",
+    "  ('Luana',20,'SãoPaulo','2000-09-05','F',1200),\n",
+    "  ('Katia',35,'SãoPaulo','1985-03-16','F',1600)\n",
+    "]\n",
+    "Colunas = [\"Nome\",\"Idade\",\"Estado\",\"DataNascimento\",\"Sexo\",\"Salario\"]\n",
+    "df = spark.createDataFrame(data=Dados, schema = Colunas)\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Salvando o DataFrame dentro do Azure DataLake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.repartition(1).write.format(\"csv\").option(\"header\", \"true\").save(\"adl://teste.azuredatalakestore.net/DF/Teste.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Copiando, Movendo, Renomeando e Excluindo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copiando o caminho do ultimo arquivo na pasta 'Teste'\n",
+    "file=dbutils.fs.ls('adl://teste.azuredatalakestore.net/DF/Teste.csv')[-1].path \n",
+    "print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Movendo o arquivo para pasta 'DF'\n",
+    "dbutils.fs.mv(file, 'adl://teste.azuredatalakestore.net/DF/') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copiando o caminho do ultimo arquivo na pasta 'DF'\n",
+    "file=dbutils.fs.ls('adl://teste.azuredatalakestore.net/DF')[-1].path \n",
+    "print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Renomeando o Arquivo para 'NovoNome.csv'\n",
+    "dbutils.fs.mv(file, 'adl://teste.azuredatalakestore.net/DF/NovoNome.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Excluindo a pasta Teste\n",
+    "dbutils.fs.rm('adl://teste.azuredatalakestore.net/DF/Teste.csv/', recurse=True)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
